Closed Bug 1411685 Opened 8 years ago Closed 8 years ago

Crash in <T>::operator() | mozilla::detail::RunnableFunction<T>::Run

Categories

(Core :: Disability Access APIs, defect, P2)

57 Branch
x86
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- disabled
firefox58 --- disabled
firefox59 --- disabled
firefox60 --- disabled
firefox61 --- fixed

People

(Reporter: davidb, Assigned: Jamie)

References

Details

(Keywords: crash, regression, Whiteboard: [aes+])

Crash Data

Attachments

(1 file)

This is a top crash on Windows, though it looks like it doesn't come from many installations.
> This is a top crash on Windows, though it looks like it doesn't come from > many installations. Yeah, I'm not sure what to make of this. I think there are a few kinds of stacks. Some that I noticed: Ones that crash at null and are related to cookies, like: https://crash-stats.mozilla.com/report/index/793571ad-8b7f-4ed8-841d-1e34f0171027 And ones where accessibility is active, and related to COM IPC like: https://crash-stats.mozilla.com/report/index/361b1776-f8f4-4743-bf08-c06090171027 I'm pretty sure it is the latter that is spiking.(In reply to Andrew McCreight [:mccr8] from comment #1)
There are 542 crashes for 373 installs in 58.0b4 and 191 crashes for 97 installs in 59.0a1.
[Tracking Requested - why for this release]: the signature is currently the top browser crash on 58.0b4 / 11% of all browser crashes. a small share of the reports come with MOZ_RELEASE_ASSERT(marshalResult != ((HRESULT)0x80070057L)) from bug 1383501
Keywords: regression
ni on dbolter to weigh in.
Flags: needinfo?(dbolter)
This should not be tracked -- those assertions are on Nightly and Dev-Ed only.
nearly 80% of crashes on 58.0b4 are from users on the beta channel though, the rest of them are devedition users.
(In reply to [:philipp] from comment #7) > nearly 80% of crashes on 58.0b4 are from users on the beta channel though, > the rest of them are devedition users. The problem is that this signature is pretty generic. The beta 4 crashes are the same signature but a different cause that has nothing to do with a11y code.
thanks, i will file a separate bug.
Marcia sounds like we may need to track the spin off bug (comment 10).
Flags: needinfo?(dbolter)
Depends on: 1419548
Flags: needinfo?(dbolter)
Aaron, we should probably stop the crashing on beta at this point(?)
Flags: needinfo?(dbolter) → needinfo?(aklotz)
That'll be handled by bug 1414421.
Flags: needinfo?(aklotz)
See Also: → 1414421
Given https://hg.mozilla.org/releases/mozilla-beta/rev/64ea10c053272a0f0e208dfada147ab9d4134379, I think we shouldn't track this anymore. If someone disagrees, please set the flags back -- thanks!
We decided in bug 1431404 comment 15 to stop these diagnostic crashes even on nightly, since they aren't getting us any closer to fixing the underlying problem and cause pain for users who may not even care. Unfortunately, I missed this one in the patch for bug 1431404.
Assignee: nobody → jteh
Comment on attachment 8961903 [details] Bug 1411685: Remove another accessibility related diagnostic crash on Nightly. https://reviewboard.mozilla.org/r/230726/#review239868
Attachment #8961903 - Flags: review?(aklotz) → review+
Pushed by aklotz@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9cc46ceede59 Remove another accessibility related diagnostic crash on Nightly. r=aklotz
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Please nominate this for Beta approval when you get a chance.
(In reply to Ryan VanderMeulen [:RyanVM] from comment #21) > Please nominate this for Beta approval when you get a chance. This does not affect beta, since these were diagnostic asserts that only ran in nightly builds.
Flags: needinfo?(jteh)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: