ipc/mscom/ProxyStream.cpp
@@ -331,9 +331,7 @@ ProxyStream::ProxyStream(REFIID aIID, IUnknown* aObject, Environment* aEnv,
 
     marshalResult = ::CoMarshalInterface(stream, aIID, aObject, MSHCTX_LOCAL,
                                          nullptr, mshlFlags);
-#if !defined(MOZ_DEV_EDITION)
-    MOZ_DIAGNOSTIC_ASSERT(marshalResult != E_INVALIDARG);
-#endif // !defined(MOZ_DEV_EDITION)
+    MOZ_ASSERT(marshalResult != E_INVALIDARG);
     if (FAILED(marshalResult)) {
       return;
     }
